--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "webpack --watch-stdin --progress --color --mode development"
+  },
   "devDependencies": {
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
