--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "start": "webpack --watch-stdin --progress --color --mode development"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
   },
