--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.6'
 # TODO: 不同项目端口占用
 services:
   # 开发环境数据库
-  postgresql_dev:
+  postgresql_mapdog_dev:
     restart: always
     image: postgres
     environment:
@@ -13,7 +13,7 @@ services:
       - "3456:5432"
 
   # 测试环境数据库
-  postgresql_test:
+  postgresql_mapdog_test:
     restart: always
     image: postgres
     environment:
