--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /priv/static/
 # Generated on crash by the VM
 erl_crash.dump
-
+package-lock.json
 # Files matching config/*.secret.exs pattern contain sensitive
 # data and you should not commit them into version control.
 #
