--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "webpack --watch-stdin --progress --color --mode development"
+    "start": "webpack --watch-stdin --progress --color --mode development",
+    "lint": "eslint assets"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -8,6 +9,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-loader": "^2.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
