使用自己发布的Lint

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-g4rick": "^1.0.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
