--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-g4rick": "^1.0.1-beta.1",
+    "eslint-config-g4rick": "^1.0.1",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
